Add chapter1 pictures

--- a/willpower.tex
+++ b/willpower.tex
@@ -25,7 +25,7 @@
 \begin{titlingpage}
   \TitlePageFormat{Андрусь\ \ Белавешкін}
       {Воля\ \ да\ \ жыцьця}
-      {дапаможнік\ \ па\ \ усьвядомленным\ \ здароўі}
+      {дапаможнік\ \ па\ \ ўсьвядомленным\ \ здароўі}
       {2019, Пераклад 2024}
 
 \end{titlingpage}
