--- a/willpower/chapter4.tex
+++ b/willpower/chapter4.tex
@@ -32,7 +32,7 @@
 
 \emph{Тое, як мы ставімся да ежы, праецыруецца і на нашае стаўленьне да жыцьця наогул. Таму для таго, каб скласьці ўяўленьне пра чалавека, убачыць яго сапраўднага, паабедайце з~ім. Тое, як ён есьць, як абыходзіцца зь ежай, як жуе, як пачынае і заканчвае сталаваньне, шмат скажа пра яго асобу.}
 
-\begin{figure}[ht!]
+\begin{figure}[htb!]
   \centering
   \includegraphics[scale=1.5]{willpower/ch4/1.pdf}
 \end{figure}
