Add chapter2 pictures

--- a/belaveshkin.sty
+++ b/belaveshkin.sty
@@ -1,6 +1,7 @@
 \RequirePackage{fontspec}
 \RequirePackage{enumitem}
 \RequirePackage{graphicx}
+\RequirePackage{graphbox}
 \RequirePackage{indentfirst}
 \RequirePackage{hyperref}
 \RequirePackage{eso-pic}
