--- a/willpower/chapter2.tex
+++ b/willpower/chapter2.tex
@@ -10,6 +10,12 @@
 
 \emph{Пры немэдыкамэнтозным лячэньні цукровага дыябэту 2 тыпу абмежаваньне калярыйнасьці і нескладаныя фізычныя практыкаваньні ўсяго за 1 год вывелі ва ўстойлівую рэмісію 61\,\% пацыентаў. У іншым дасьледаваньні навукоўцы папрасілі аўстралійскіх абарыгенаў з~цукровым дыябэтам перайсьці на лад жыцьця і харчаваньне іх продкаў, і літаральна за 7 тыдняў большасьць сымптомаў дыябэту зьнікла.}
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.3]{willpower/ch2/1.pdf}
+  \includegraphics[scale=1.3]{willpower/ch2/2.pdf}    
+\end{figure}
+
 За сотні гадоў мы прыйшлі ад голаду ды інфэкцыяў да багатага харчаваньня і стэрыльнай чысьціні, але сталі пакутаваць на «хваробы цывілізацыі», якія рэдкія ў~паляўнічых-зьбіральнікаў сучаснай Афрыкі і Паўднёвай Амэрыкі, але часта сустракаюцца ў~прадстаўнікоў «цывілізаванага сьвету». Так, мы жывём больш, але й больш пакутуем ад розных неінфэкцыйных захворваньняў, што значна пагаршаюць якасьць нашага паўсядзённага жыцьця.
 
 Паводле розных ацэнак, 90--100 тысячаў гадоў прадстаўнікі віду Homo sapiens вялі лад жыцьця паляўнічых-зьбіральнікаў, і толькі апошнія 5--6 тысячаў гадоў пачала разьвівацца цывілізацыя. Нашы гены прыстасаваліся да пэўнага асяродзьдзя, мы да яго былі цалкам адаптаваны. Пры рэзкіх зьменах узьнікае неадпаведнасьць генаў і асяродзьдзя, нашыя гены не пасьпяваюць пераладавацца так хутка. Спрабуючы прыстасавацца да незвычайнага асяродзьдзя, арганізм шкодзіць сабе: нават адаптыўныя рэакцыі могуць аказацца разбуральнымі, а~цела і розум проста не пасьпяваюць за зьменамі.
@@ -22,7 +28,10 @@
 
 \textbf{Тэорыя эвалюцыйнай неадпаведнасьці пацьвярджае,} што многія нашы рэакцыі выпрацаваліся для адпаведнасьці іншаму асяродзьдзю, у~якім мы эвалюцыянавалі. Наш мозг і цела не прызначаныя для доўгага сядзеньня перад экранам, для сацыяльнай ізаляцыі, для перагрузкі ежай, для хранічнага стрэсу. Мэханізмы канфлікту «гены / асяродзьдзе» аднолькавыя для любых хваробаў цывілізацыі, таму ўсе яны вылечваюцца ў~межах адзінага падыходу. Да іх адносяцца ішэмічная хвароба сэрца, цукровы дыябэт 2 тыпу, атэрасклероз, гіпэртанія, інфаркты, інсульты, дэпрэсія, акнэ, гемарой, некаторыя пухліны, алергіі і аўтаімунныя захворваньні, бессань, астэахандроз, атлусьценьне і інш.
 
-% ((карцінка: Тэорыі неадпаведнасьці Эвалюцыйнае несупадзеньне Дэсынхрозы Дэзадаптацыя Хваробы цывілізацыі Хваробы багацьця))
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch2/3.pdf}
+\end{figure}
 
 \textbf{Напрыклад, у~мовах шматлікіх плямёнаў паляўнічых-зьбіральнікаў нават адсутнічаюць словы, якія абазначаюць бессань, а~падлеткі ніколі не сутыкаліся з~акнэ. Але варта перайсьці на заходні стыль харчаваньня, як тут жа зьяўляюцца высыпаньні.} Гэтыя хваробы дрэнна паддаюцца мэдыкамэнтознаму лячэньню. Сучасная мэдыцына не імкнецца вылечыць дыябэт 2 тыпу або гіпэртэнзію, а~можа толькі «кантраляваць іх». Пры атлусьценьні мэдыкамэнтозны эфэкт вельмі нязначны: напрыклад, за год лячэньня такімі прэпаратамі, як арлістат, страта вагі склала ўсяго 2,9 кг, сібутрамін~--- 4,7 кг. Пры гэтым у~«прэпаратаў ад пахуданьня» ёсьць сур'ёзныя пабочныя эфэкты і сындром адмены. Але ж, проста зьмяніўшы лад жыцьця, чалавек можа спакойна губляць 0,5--1 кг у~тыдзень.
 
@@ -108,7 +117,11 @@
 
 Чысьціня выратавала нас ад шматлікіх інфэкцыяў, але павялічыла колькасьць алергій і аўтаімунных захворваньняў. Чым чысьцейшае асяродзьдзе, чым актыўнейшае ўжываньне антыбіётыкаў, тым меншая разнастайнасьць мікрафлёры кішачніка, што правакуе мноства парушэньняў здароўя. Рост гэтых захворваньняў настолькі вялікі, што гаворка ідзе ўжо пра эпідэмію аўтаімунных захворваньняў. Сучасны жыхар страціў ужо палову відаў мікробаў, пры гэтым нарастае прапорцыя шкодных і зьмяншаецца частка карысных бактэрыяў.
 
-% ((карцінка: Было больш: Сем'яў Фізычнае актыўнасьці розных відаў Знаходжаньня на сонцы Разнастайнасьці мікрабіёму, бактэрыяльнае нагрузкі Цэльнае бялковае й расьліннае ежы Холаду Стала больш: Самоты («Адзіноты» -- абсалютныя сынонімы, што вам больш даспадобы) Калярыйнасьці харчаваньня Узроўню стрэсу Хатняга камфорту, начнога й вечаровага сьвятла Цукру, рафінаваных вугляводаў))
+\begin{figure*}[htb!]
+  \centering
+  \includegraphics[align=t,scale=1.5]{willpower/ch2/4.pdf}\qquad\qquad
+  \includegraphics[align=t,scale=1.5]{willpower/ch2/5.pdf}
+\end{figure*}
 
 \subsection*{Мала руху}
 
@@ -283,7 +296,10 @@
 
 Гэтыя хваробы~--- проста розныя галовы адной гідры, імя якой~--- мэтабалічны сындром. Пры гэтай распаўсюджанай «хваробе цывілізацыі» могуць назірацца парушэньні з~боку самых розных органаў і сыстэмаў, але ўсе яны маюць агульныя прычыны і адну схэму разьвіцьця. Таму ў~гэтым выпадку няма сэнсу ўзьдзейнічаць на іх вонкавыя праявы, трэба працаваць з~глыбіннымі, базавымі прычынамі. Калі такому чалавеку трапіцца адмысловец, які падкажа, што трэба сыстэмна зьмяняць лад жыцьця, і чалавек адэкватна адрэагуе на такую рэкамэндацыю, большасьць праблемаў адпадуць самі па сабе, а~жыцьцё пачне наладжвацца.
 
-% ((карцінка: Дыябэт 2 тыпу Атлусьценьне Бессань Дэпрэсія Бясплоднасьць Аўтаімунныя Алергічныя хваробы Акнэ Гемарой Карыес Астэахандроз // Бясплоднасьць Гіпэртэнзія Атлусьценьне Цукровы дыябэт Хваробы сэрца, атэрасклероз Мэтабалічны сындром Хранічнае запаленьне / Вісцэральнае атлусьценьне Рэзыстэнтнасьць да інсуліну mTOR гіпэрактыўнасьць / ЗЛЖ Лячэньне Прафіляктыка))
+\begin{figure*}[htb!]
+  \centering
+  \includegraphics[width=\textwidth]{willpower/ch2/6.pdf}
+\end{figure*}
 
 Як толькі вы мяняеце лад жыцьця~--- харчаваньне, рух, сон, колькасьць стрэсу, рэжым,~--- вы бачыце паляпшэньне здароўя ў~многіх паказьніках, нават у~тых, аб якіх і не задумваліся. Зьмяняеце дыету, каб палепшыць стан скуры? Палепшыцца страваваньне, павялічыцца энэргія. Пачалі бегаць, каб схуднець? Вы станеце стрэсаўстойлівей і будзеце лепш спаць. На клеткавым узроўні гэтыя зьмены злучаныя са зьменай шэрагу сыгнальных шляхоў, галоўным зь якіх зьяўляецца бялок mTOR, які кіруе мэтабалічнай актыўнасьцю клеткі.
 
@@ -325,7 +341,10 @@
 
 Напрыклад, толькі ў~8\,\% людзей, старэйшых за 18 гадоў, ёсьць цукровы дыябэт 2 тыпу, але пры гэтым ужо ў~15\,\% людзей ёсьць парушэньні талерантнасьці да глюкозы, а~ў 25\,\%~--- прыкметна падвышаная сэкрэцыя інсуліну.
 
-% ((карцінка 8\,\% цукровы дыябэт 15\,\% парушэньне талерантнасьці да глюкозы 25\,\% інсулінарэзістэнтнасьць))
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch2/7.pdf}
+\end{figure}
 
 \emph{Калі ў~чалавека з~інсулінарэзістэнтнасьцю і не разьвіваецца дыябэт, у~яго павялічваецца рызыка артэрыяльнай гіпэртэнзіі, хваробы Альцгаймэра, хваробаў сэрца, рака, памяншаецца працягласьць жыцьця. У здаровых людзей высокая інсулінарэзістэнтнасьць злучаная зь вялікімі рызыкамі для здароўя. Страшная ня тая хвароба, якая бачная, а~тая, якую мы ня бачым.}
 
@@ -376,7 +395,10 @@
 
 \infobox{Паступовае распаўсюджваньне мыйных, антыбактэрыйных сродкаў суправаджалася адначасовым павелічэньнем колькасьці аўтаімунных і алергічных захворваньняў.}
 
-% ((карцінка: Размаітасьць мікрафлёры паляўнічыя-зьбіральікі сельская гаспадарка індустрыяльная ежа рафінаваная ежа / гадоў таму цяпер / зьніжэньне разнастайнасьці дыеты санітарная рэвалюцыя антыбіётыкі рафінаваная ежа))
+\begin{figure*}[htb!]
+  \centering
+  \includegraphics[width=\textwidth]{willpower/ch2/8.pdf}
+\end{figure*}
 
 \subsection*{«Новых сяброў набывай, ды старых не забывай»}
 
@@ -888,3 +910,11 @@
 2. Колькі пражылі вашыя сваякі ў~сярэднім?
 
 3. Разьлічыце свой біяўзрост па анляйн-калькулятарах (Gero Bioage, \url{www.aging.ai} ды іншыя).
+
+\clearpage
+\thispagestyle{empty}
+\begin{figure}[htb!]
+  \vspace*{-0.35in}
+  \includegraphics[width=\textwidth]{willpower/ch2/full.pdf}  
+\end{figure}
+
