Add chapter 3 pictures

--- a/willpower/chapter3.tex
+++ b/willpower/chapter3.tex
@@ -80,7 +80,10 @@
 
 У запісах варта адзначыць працягласьць жыцьця, усе вядомыя хваробы і асаблівасьці іх цячэньня~--- у~якім узросьце ўзьніклі і як разьвіваліся, зьвесткі з~мэдыцынскіх карт. Удакладняйце лад жыцьця, дыету, кагнітыўныя і паводзінныя асаблівасьці, схільнасьць да алькагалізму або гульняманіі, дэпрэсіі, суіцыду ды іншых псыхалягічных разладаў. Спытайце пра наяўнасьць аўтаімунных захворваньняў, пра асаблівасьці праходжаньня цяжарнасьцяў, час наступу мэнапаўзы. Асаблівую ўвагу надайце незвычайным праявам: напрыклад, вельмі раньняй гіпэртэнзіі, інфаркту або дэмэнцыі, а~таксама тым захворваньням, якія зьяўляюцца ў~сямейным дрэве неаднаразова.
 
-% ((карцінка: Эфэктыўнае выкарыстаньне індывідуальных асаблівасьцяў))
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch3/1.pdf}
+\end{figure}
 
 \textbf{Рызыка для вас тым вышэйшая, чым бліжэйшая ступень сваяцтва, чым больш выпадкаў у~радаводзе, чым ранейшы ўзрост праявы хваробы.}
 
@@ -105,7 +108,10 @@
 
 Мы можам вымяраць сваю фізычную актыўнасьць (фітнэс-трэкеры), якасьць сну, вагу, целасклад, узровень глюкозы, узровень кетонавых целаў у~выдыханым паветры, кіслотнасьць мачы, электракардыяграфію, варыябельнасьць пульсу, частасьць дыханьня, частасьць сардэчных скарачэньняў, артэрыяльны ціск, цяглічнае напружаньне, электраэнцэфалаграму і гэтак далей. Можна з~дапамогай спэцыяльных праграмаў адзначаць свой узровень шчасьця й энэргічнасьці ў~пэўныя адрэзкі дня і аб'ектыўна вымяраць прагрэс у~мэдытацыі з~дапамогай нэўрагарнітураў накшталт Muse. Ёсьць магчымасьць сабраць даныя ДНК-тэстаў, прааналізаваць мікрабіёту, зазірнуць у~арганізм з~дапамогай МРТ і шмат чаго яшчэ.
 
-% ((карцінка: ацэнка рэзэрву ацэнка рызыкі раньняя дыягностыка))
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch3/2.pdf}
+\end{figure}
 
 \emph{Масіў прадукаваных намі зьвестак мы можам успрымаць як своеасаблівае «віртуальнае» люстэрка, як спосаб назіраць за сабой аб'ектыўна, не належачы на эмацыйныя адзнакі.}
 
@@ -121,7 +127,10 @@
 
 \emph{\textbf{Дзёньнік перамогаў, падзякі, задавальненьня і ня толькі.} Даведзена, што любыя перамогі павышаюць узровень тэстастэрону і адчувальнасьць мозгу да яго: адзначаючы свае дасягненьні, вы робіце сабе добра. Ёсьць фармат дзёньніка ўзаемаадносінаў, дзе партнэры ці муж і жонка робяць свае запісы, гэта дапамагае ўзаемаразуменьню і паляпшае адносіны ў~70\,\% выпадкаў. Можна весьці журнал памылак або журнал марнаваньняў часу. Або, напрыклад, паспрабуйце скласьці антырасклад, куды вы першымі пачняце ўносіць адпачынак, час яды, сон, заняткі спортам і ўзнагароды сябе. Так вы зможаце ўзаконіць у~сваім жыцьці заняткі здароўем без пачуцьця віны, бо не выпадкова кажуць, што праца~--- адна з~самых небясьпечных формаў пракрастынацыі.}
 
-% ((карцінка: Чэк-сьпісы, справаздачы Дзёньнікі харчаваньня Дзёньнік трэніровак Дзёньнік стрэсаўстойлівасьці))
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch3/3.pdf}
+\end{figure}
 
 \subsection*{Штодзёньнік}
 
@@ -141,7 +150,10 @@
 
 Чым займаюцца біяхакеры? Вымяраюць сябе, дастасоўваюць да вялікага мноства мэтрыкаў сыстэмны падыход, паляпшаюць «пэрсанальныя зьвесткі», уплываючы як на свой арганізм, так і на навакольнае асяродзьдзе. Біяхакеры выкарыстоўваюць прасунутыя фітнэс-трэкеры (напрыклад, смарт-пярсьцёнак Ourа), якія сочаць за колькасьцю крокаў, варыябэльнасьцю пульсу, фазамі сну і да т.~п. Распаўсюд атрымліваюць прылады дыстанцыйнага маніторынгу здароўя (non-wearable гаджэты), бо насіць і подзаряжать шматлікія гаджэты няёмка. Таму існуе, напрыклад, рэгістрацыя сну сэнсарнай стужкай у~ложку. Зьмяншэньне памераў прыладаў вядзе да павелічэньня хібнасьці вымярэньняў у~параўнаньні зь лябараторнымі вымярэньнямі. Праўда, вытворцы такіх прыладаў запэўніваюць, што розьніца ў~вымярэньні якасьці сну лябараторнай полісамнаграфіяй і фітнэс-бранзалетам складае ня больш за 10\,\%, аднак іншыя зьвесткі гавораць аб значных памылках.
 
-% ((карцінка: рухальная актыўнасьць калёрыі, макранутрыенты узровень стрэсу пульс і ціск якасьць і колькасьць сну якасьць паветра праца мозгу))
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch3/4.pdf}
+\end{figure}
 
 Мы можам ацэньваць ня толькі ўнутранае, але і навакольнае асяродзьдзе, заўважаючы, як на наша здароўе і самаадчуваньне ўплывае ўсё, што нас атачае. Напрыклад, праграмы SunDay: Vitamin D \& UV Monitor або Dminder дапамогуць адсачыць сонечную актыўнасьць, час для загару і ўзровень вітаміну D. Падключаныя да смартфона датчыкі вуглякіслага газу (CO\textsubscript{2}), чысьціні паветра (P.M 2,5), вільготнасьці ды іншыя дапамагаюць сачыць за якасьцю паветра як унутры пакоя, так і на дварэ.
 
@@ -159,7 +171,10 @@
 
 \textbf{Біямаркеры, якія можна маніторыць:}
 
-% ((карцінка: ліпідны профіль глікемічны профіль вітаміны і мінэралы гармоны і біяхімія запаленьне ды імунітэт скорасьць старэньня акісьляльны стрэс))
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch3/5.pdf}
+\end{figure}
 
 \emph{\textbf{Глікемічны статус:} глікаваны гемаглабін, інсулін, глюкоза, індэкс інсулінарэзыстэнтнасьці (HOMA-IR).}
 
@@ -195,7 +210,10 @@
 
 \emph{\textbf{ЭКГ.} Паколькі часам небясьпека тоіцца ў~парушэньнях рытму, то абавязкова трэба праводзіць содневы маніторынг ЭКГ Холтэра, якіе нярэдка фіксуе арытміі, ня бачныя на звычайнай кардыяграме. Нагрузачная проба (трэдміл або велаэргамэтрыя) дазваляе ацаніць, як рэагуе ЭКГ на павелічэньне частасьці сардэчных скарачэньняў, ці зьяўляюцца ішэмічныя зьмены, парушэньні рытму, ці падвышаецца ціск.}
 
-% ((карцінка: нагрузачныя тэсты электракардыяграфія ультрагукавое дасьледаваньне тамаграфія сканаваньне))
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch3/6.pdf}
+\end{figure}
 
 \emph{\textbf{Мультысьпіральная кампутарная тамаграфія сасудаў сэрца} паказвае адклады кальцыю ў~сасудах сэрца, што дастаткова дакладна вызначае вашую рызыку. Колькасьць кальцыя вымяраецца ў~кальцыевым індэксе паводле Агатстона. Ідэальнае значэньне нуль, але каранарная кальцыфікацыя вышэйшая за 300 адзінак Агатстона~--- гэта паказьнік высокай рызыкі.}
 
@@ -248,6 +266,11 @@
 Дасьледаваньне PDAY вывучала аўтапсіі амаль 3000 людзей ва ўзросьце 15--34, 13\,\% абсьледаваных аказаліся з~выяўленым атэрасклерозам (уключна зь нестабільнымі бляшкамі). Выяўленыя прыкметы атэрасклерозу абдамінальнай аорты ў~20\,\% (15--19 гадоў), 40\,\% (30--34 гады), паражэньне каранарных артэрыяў у~10\,\% (15--19 гадоў), 30\,\% (30--34 гады). У іншым дасьледаваньні УГД паказала прыкметы каранарнага атэрасклерозу ў~15\,\% людзей маладзейшых за 20, 37\,\% ва ўзросьце 20--29, 60\,\% ва ўзросьце 30--39, 71\,\% ва ўзросьце 40--49, 85\,\% ва ўзросьце старэйшых за 50. Аўтапсіі загінулых жаўнераў (сярэдні ўзрост 26) паказалі каранарны атэрасклероз у~78\,\%, пры гэтым звужэньне прасьвету артэрыяў больш чым на 50\,\%~--- у~20\,\% выпадкаў, больш за 75\,\% прасьвету~--- у~9\,\%. Як бачыце, паражэньні сардэчна-сасудзістай сыстэмы часта ўзьнікаюць даволі рана. Таму прэвэнтыўная дыягностыка можа быць эфэктыўнай і карыснай. Можна запаволіць і нават скіраваць назад працэс атэрасклерозу.
 
 \emph{\textbf{Генэтычнае тэставаньне.} Існуе вялікая колькасьць розных тэхналёгіяў тэставаньня, ад частковага да поўнагеномнага, і кампаніяў, якія займаюцца тэставаньнем. Варта загадзя адзначыць, што сувязь захворваньне--гены далёка не заўсёды адназначная, таму да атрыманых рэкамэндацыяў варта ставіцца скептычна.}
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch3/7.pdf}
+\end{figure}
 
 \textbf{Толькі невялікая колькасьць генаў вывучаная настолькі, што стала магчымым вызначыць іх узаемасувязь зь некаторымі захворваньнямі і спосабы перадухіленьня рызыкі. Напрыклад, сувязь BRCA1 і раку грудзей, APOE і хваробы Альцгаймэра.}
 
@@ -316,7 +339,10 @@
 
 \emph{Зрабіць мінімум~--- не выклікае ўнутранага адрыньваньня, нягледзячы нават на стомленасьць, бо сьмешна ж баяцца 20 прысяданьняў? Няма часу і месца мэдытаваць? Можна выйсьці на гаўбец ці адысьці ў~прыбіральню, каб на працягу пары хвілінаў сфакусавацца на дыханьні. Няма часу на трэніроўку? Прайдзіцеся сходамі: трошкі фізычнай актыўнасьці нашмат лепш, чым наогул ніякага руху.}
 
-% ((штодзённыя невялікія звычкі)) (((калі б кніга была для дзяцей, я прапанавала б выслоўе «звычкі-невялічкі»)))
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch3/8.pdf}
+\end{figure}
 
 Першыя крокі~--- найважнейшыя. Найцяжэй нам менавіта пачаць нешта рабіць, ініцыяваць само дзеяньне. Затое ўжо калі пачалі, тут надыходзіць прыемнасьць, і мы ўжо можам займацца даўжэй. Так што як ня хочаце бегаць~--- проста абуйце красоўкі і абыдзіце дом, хай гэта будзе ваш мінімум. Самае нязначнае дзеяньне лепшае за поўную адсутнасьць такога. Напрыклад, калі ў~вас няма часу на перапынак, хоць проста ўстаньце-сядзьце, гэта ўжо будзе добра.
 
@@ -339,7 +365,10 @@
 
 \textbf{Залатая сярэдзіна здароўя~---} гэта балянс паміж адсутнасьцю якога-небудзь клопату пра здароўе і апантанасьцю ім. Прынцып «больш~--- значыць лепш» тут не працуе. Практычна для ўсіх рэсурсаў здароўя існуе U-падобная сувязь паміж колькасьцю намаганьняў і атрыманай карысьцю. Гэта значыць, што больш~--- гэта часьцяком шкода. Напрыклад, дасьледаваньні выявілі U-падобную сувязь паміж бегам і сьмяротнасьцю: ёсьць верхняя мяжа карысьці і фізычнай актыўнасьці. Залішняя актыўнасьць можа зьмяншаць узровень тэстастэрону, парушаць мэнструальны цыкль, прыгнятаць імунітэт.
 
-% ((карысьць для здароўя U-крывая карысьць-якасьць павелічэньне стымулу))
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch3/9.pdf}
+\end{figure}
 
 \emph{\textbf{Здароўе}~--- гэта так крута, ажно можа выклікаць устойлівую залежнасьць, якая патрабавацьме павелічэньня дозы для большага задавальненьня. Рацыянальнасьць тады адсоўваецца на другі плян, галоўнае~--- атрымаць больш кайфу. Таму людзі бягуць усё большыя маратоны, плывуць бясконцыя дыстанцыі, спрабуюць усё даўжэй галадаць, імкнуцца браць усё большую вагу, зьвяртаюцца да рызыкоўных відаў спорту, нягледзячы на высокі траўматызм і рызыку сьмерці. Такія ЗЛЖ-залежнасьці ня маюць нічога агульнага са здароўем. Чалавек, які «зьняўся» з~наркотыкаў і «перасеў» на маратоны, толькі зьмяніў аб'ект залежнасьці, а~не акрыяў. Хоць грамадзкая шкода ад марафонаў, вядома, меншая, чым ад наркотыкаў.}
 
@@ -404,6 +433,11 @@
 
 «Выкарыстоўваю адразу тры дыеты, бо на адной не наядаюся»~--- знаёма? Калі нехта гаворыць пра посьпех сваёй мэтодыкі пахуданьня ці набору цяглічнай масы, то часам задумваесься: у~чалавека атрымалася дзякуючы ці насуперак ёй? Сёньня існуе вялікая колькасьць аздараўленчых мэтодыкаў, тыпаў дыет, відаў спорту і варыянтаў адпачынку, але важна выбіраць тое, што патрабуе ад вас мінімальных затрат і дае асабіста вам максімальны вынік. Ёсьць вядомае правіла: 20\,\% намаганьняў даюць 80\,\% выніку, а~астатнія 80\,\% намаганьняў~--- толькі 20\,\% выніку. Ужываньне правіла 80/20 у~аздараўленьні дапаможа, з~аднаго боку, дзейнічаць больш эфэктыўна і бясьпечна, зь іншага~--- паляпшаць сваё здароўе бяз моцных забаронаў і абмежаваньняў.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch3/10.pdf}
+\end{figure}
+
 \textbf{Мы можам выбраць мінімум самых важных дзеяньняў, каб атрымаць большую частку ад заплянаванага поўнага выніку.} Напрыклад, для добрай фізычнай формы нам неабавязкова жыць у~спартыўнай зале і штодзень трэніравацца. Дасьледаваньні паказваюць, што нават пяць хвілінаў інтэнсіўных трэніровак за дзень даюць статыстычна заўважны вынік. У харчаваньні мы працягнем атрымліваць ад яго карысьць, калі ў~нас будзе 80\,\% здаровага рацыёну, а~20\,\% мы пакінем на звычайную ежу. Імкнуцца да 100\,\% можа быць занадта нязручна, патрабаваць ад нас зьмены працоўнага графіка, напрыклад, каб своечасова правільна паесьці. Нам дастаткова выкарыстоўваць адну-дзьве тэхнікі расслабленьня, каб зьнізіць узровень стрэсу на 80\,\%, а~не спрабаваць «намаганьнем волі» дамагчыся абсалютнага спакою. Для таго каб атрымаць пачуцьцё кантролю, неабавязкова імкнуцца поўнасьцю кантраляваць усю сытуацыю. Дастаткова дробязі, адной справы, якую мы актыўна распачнём і возьмем яе пад кантроль. Нават невялікі ўчынак ужо вяртае ўпэўненасьць.
 
 \emph{Мы шмат чулі пра хаду і 10\,000 крокаў, а~вось навукоўцы ўпэўненыя, што і 7500 крокаў забясьпечаць большую частку карысьці. Першыя 20 хвілінаў трэніроўкі прынясуць столькі ж (калі ня больш) карысьці, чым наступныя 40 хвілін.}
@@ -444,6 +478,11 @@
 Фізычная актыўнасьць, напрыклад, запускае эвалюцыйныя мэханізмы адаптацыі, павялічваючы нашыя рэсурсы здароўя, паляпшаючы працу мозгу і стрэсаўстойлівасьць, фігуру і якасьць энэргіі. За тысячы гадоў людзі знайшлі многія спосабы паўплываць на свой стан. Розныя цывілізацыі, незалежна адна ад адной, выкарыстоўвалі зьмены ў~харчаваньні, цеплавыя працэдуры, масаж, гартаваньне, галаданьне, мэдытацыю, спорт і да т.~п.
 
 \emph{Прынцып эвалюцыйнага падыходу факусуецца на тым, каб актываваць унутраныя рэсурсы арганізма праз прыродныя сыгналы, а~не прамым умяшаньнем у~малекулярныя шляхі. Напрыклад, ёсьць спробы выкарыстоўваць антыдыябэтычны прэпарат мэтфармін для падаўжэньня жыцьця. Сапраўды, ён стымулюе працэс аўтафагіі (самаачышчэньне клетак), прыгнятаючы актыўнасьць mTOR. Але эвалюцыйна больш бясьпечна і эфэктыўна выкарыстоўваць харчовае ўстрыманьне і фізычную актыўнасьць.}
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch3/11.pdf}
+\end{figure}
 
 Нашыя гены~--- гэта датчыкі, сэнсары навакольнага асяродзьдзя. Што мы даём арганізму на ўваходзе, тое і атрымліваем на выхадзе. Сілкуючы арганізм якаснымі прадуктамі, атачаючы добрым кліматам, клапатлівымі сябрамі, практыкуючы прабежкі ды шпацыры на сьвежым паветры~--- атрымліваем на выхадзе выдатнае самаадчуваньне і моцнае здароўе. Калі ж вашае сілкаваньне~--- гэта таксічныя навіны, фастфуд, канапа, сацыяльная ізаляцыя, трывогі і стрэс, то не дзівіцеся зьнясіленьню, вычарпанасьці, хранічным і гострым праявам нездароўя.
 
@@ -509,6 +548,11 @@
 
 \textbf{Працягваючы марскую тэматыку: караблю небясьпечныя ня ўсе прабоіны, а~толькі тыя, што знаходзяцца ніжэй за ватэрлінію, так і розныя адхіленьні здароўя маюць для нас розную значнасьць.} Уявіце сабе бочку з~рэбрамі рознай вышыні. Колькі вады там можа зьмясьціцца? Правільна, па ўзроўні самага нізкага рабра. Мы можам уявіць сабе, што розныя рэбры~--- гэта рэсурсы здароўя, а~ўзровень вады~--- гэта ваш запас здароўя і энэргіі. З чаго трэба пачаць, каб узьняць узровень здароўя? Зразумела, з~самага слабога зьвяна. Выявіць яго можна, вымераўшы свае рэсурсы здароўя і прааналізаваўшы, якія зьмены мацней за ўсё вам шкодзяць і горш пераносяцца?
 
+\begin{figure*}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch3/12.pdf}
+\end{figure*}
+
 \textbf{Пачынаць паляпшэньне здароўя трэба з~выяўленьня свайго самага слабога зьвяна.} Прынцып бочкі Лібіха, ён жа тэорыя абмежаваньня сыстэмы, пастулюе, што трываласьць сыстэмы вызначаецца самым слабым яе кампанэнтам, або, інакш кажучы, арганізму важнейшае за ўсё дзеяньне чыньніка, які найболей адхіляецца ад нормы. Ці працуе гэты прынцып і ўнутры аднаго рэсурсу здароўя?
 
 \emph{Маючы слаба разьвітыя цягліцы корпуса, ня варта павялічваць вагу ў~сілавым спорце, інакш будзе рызыка траўмы. Няма сэнсу старацца ў~выбары салаты, калі вы ня можаце арганізаваць устойлівы рэжым харчаваньня. Не высыпаючыся нармальна, ня варта ўзмоцнена трэніравацца або цярпець голад.}
@@ -544,6 +588,11 @@
 \subsection*{Прынцып ахілесавай пяты}
 
 Гэты прынцып мяркуе, што важна вывучыць і выявіць свае самыя слабыя месцы і абараніць іх. «Дзе коратка, там і рвецца»: у~выпадках павялічанай нагрузкі мы мацней за ўсё прасядаем у~сваіх слабых месцах, таму важна своечасова іх умацоўваць. Гэта могуць быць і псыхалягічныя трыгеры, і нашыя генэтычныя асаблівасьці, і імунітэт.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch3/13.pdf}
+\end{figure}
 
 Падумайце, зь якімі праблемамі са здароўем вы часьцей за ўсё сутыкаецеся і што можна зрабіць, каб перадухіліць іх? Дзе вашае слабое зьвяно? Напрыклад, пры стрэсе ў~адных людзей павышаецца рызыка бессані, у~другіх~--- пераяданьня, у~трэціх~--- павышаецца спажываньне алькаголю. Ведаючы свае слабыя месцы, вы можаце загадзя прыняць захады, каб не дапусьціць зрыву ў~выпадку крытычнай сытуацыі.
 
@@ -717,6 +766,11 @@
 
 З аднаго боку, рэгулярныя трэніроўкі важныя для захаваньня актыўнасьці і мозгу, і цела, з~другога~--- пастаянная раўнамерная нагрузка не працуе, бо мы хутка да яе адаптуемся. Манатоннасьць і звычнасьць аслабляюць нас, таму заўсёды патрэбныя новыя задачы, новыя сытуацыі. Адаптуючыся да незвычайных умоваў, мы трапляем у~пункты супэркампэнсацыі~--- калі пасьля адаптацыі мы становімся мацнейшымі, чым былі да.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch3/14.pdf}
+\end{figure}
+
 \textbf{Прынцып «выкарыстоўвай або страціш» працуе ня толькі датычна здароўя:} важна выкарыстоўваць свой час, інакш ён выцякае скрозь пальцы. Важна працаваць над адносінамі: пушчаныя на самацёк, яны наўрад ці будуць спантанна паляпшацца. Кожны наш навык закадаваны ў~мозгу ў~нэўронавых сувязях. Гэтыя сувязі плястычныя. Чым часьцей мы актывуем іх, тым больш яны ўмацоўваюцца. Чым радзей, тым вышэйшая рызыка таго, што навык стане слабейшым і можа нават зьнікнуць.
 
 \textbf{Калі мы мала рухаемся, то ня толькі страчваем цяглічную масу, таксама ў~нас у~мозгу памяншаецца колькасьць нэрвовых клетак, якія кіруюць цягліцамі. Таму многія нэўрадэгенэратыўныя захворваньні хутчэй прагрэсуюць пры маларухомым жыцьці.}
@@ -743,6 +797,11 @@
 \section{Прынцып узаемаўплыву}
 
 «Эфэкт матыля» (магчыма, вы глядзелі аднайменнае кіно) рамантычна апісвае ўплыў дробных чыньнікаў на непрадказальныя паводзіны дынамічных нелінейных сыстэмаў. Вядома, ад узмаху матылёвага крыла вы ня скінеце дзесяць кіляграмаў, але прапампоўка аднаго з~рэсурсаў здароўя можа нечакана паўплываць на ўсе астатнія. Часам цёплыя словы падтрымкі значнага для вас чалавека матывуюць мацней, чым сотня ролікаў на ютубе. Розныя рэсурсы здароўя вельмі шчыльна зьвязаныя паміж сабой і, па сутнасьці, іх складана разглядаць ізалявана. Паляпшэньне аднаго рэсурсу аўтаматычна паляпшае большасьць астатніх, а~для дасягненьня канкрэтнай мэты трэба задзейнічаць камбінацыі розных рэсурсаў здароўя.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch3/15.pdf}
+\end{figure}
 
 Актыўнае паляпшэньне аднаго рэсурсу ўплывае як фізыялягічна, так і псыхалягічна на ўсе астатнія. Напрыклад, павелічэньне фізычнай актыўнасьці прыводзіць да якаснага кантролю над голадам, павышэньню якасьці сну і стрэсаўстойлівасьці~--- за кошт трэніроўкі антыстрэсавых сыстэмаў. Гэта фізычны бок, а~з пункту гледжаньня псыхалёгіі пасьлядоўная пасьпяховая практыка любога рэсурсу трэніруе і ўмацоўвае сілу волі, уплывае на самаацэнку, павялічвае ўпэўненасьць у~дасягненьні мэты.
 
@@ -780,6 +839,11 @@
 Ніхто ня хоча хварэць і быць слабым. Але чаму ж тады людзі робяць мноства спробаў зьмяніцца і ня могуць гэта зрабіць? Адна з~частых прычынаў~--- трапляньне ў~заганнае кола, якое зь цягам часу пагаршае здароўе і не дае магчымасьці зь яго вырвацца. Заганнае кола як балота~--- чым больш напружваесься ў~спробах выбрацца, тым мацней цябе засмоктвае. Тут важна зразумець, дзе яго можна разарваць, на якое зьвяно падзейнічаць. Бяздумныя гераічныя намаганьні зьмяніцца любой цаной могуць адно пагоршыць сытуацыю.
 
 \emph{У мэдыцыне заганным кругам называюць сытуацыю, калі само парушэньне становіцца чыньнікам, які падтрымлівае гэтае ж парушэньне. Прычына і наступства замыкаюцца: напрыклад, пры страце крыві пагаршаецца кровазабесьпячэньне, гэта вядзе да недастатковасьці сэрца, што яшчэ мацней пагаршае кровазабесьпячэньне.}
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch3/16.pdf}
+\end{figure}
 
 Гэта ж датычыць і нашых звычак. Напрыклад, чым горш мы сябе адчуваем, тым менш нам хочацца рухацца. Чым менш мы рухаемся, тым горш сябе адчуваем. Не чакайце «зручнага часу» ці «натхненьня», проста пачынайце рухацца.
 
@@ -823,3 +887,9 @@
 
 3. Ці бывала такое, што вашая рэакцыя на стрэс толькі ўзмацняла яго, а~вашыя спробы схуднець павялічвалі вагу?
 
+\clearpage
+\thispagestyle{empty}
+\begin{figure}[htb!]
+  \vspace*{-0.5in}
+  \includegraphics[width=\textwidth]{willpower/ch3/full.pdf}  
+\end{figure}
